<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/choppingboard"
        android:scaleType = "centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/usernameTick"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/displayNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText"
            app:srcCompat="@drawable/ic_clear_black_24dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/passwordTick"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:srcCompat="@drawable/ic_clear_black_24dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/confirmPasswordTick"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/confirmPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:srcCompat="@drawable/ic_clear_black_24dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="250sp"
            android:layout_height="45sp"
            android:layout_marginTop="20dp"
            android:background="#3D4450"
            android:text="Register"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <EditText
            android:id="@+id/displayNameEditText"
            android:layout_width="250sp"
            android:layout_height="35sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_rounded"
            android:ems="10"
            android:hint="Enter username here..."
            android:inputType="textPersonName"
            android:paddingHorizontal="10sp"
            android:textColor="#000000"
            android:textColorHint="#A0000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="250sp"
            android:layout_height="35sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_rounded"
            android:ems="10"
            android:hint="Confirm password here..."
            android:inputType="textPassword"
            android:paddingHorizontal="10sp"
            android:textColor="#000000"
            android:textColorHint="#A0000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="288dp"
            android:layout_height="210dp"
            android:layout_marginTop="45sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="250sp"
            android:layout_height="35sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_rounded"
            android:ems="10"
            android:hint="Enter email here..."
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10sp"
            android:textColor="#000000"
            android:textColorHint="#A0000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="250sp"
            android:layout_height="35sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_rounded"
            android:ems="10"
            android:hint="Enter password here..."
            android:inputType="textPassword"
            android:paddingHorizontal="10sp"
            android:textColor="#000000"
            android:textColorHint="#A0000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="250sp"
            android:layout_height="45sp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="Login"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayNameEditText" />

        <TextView
            android:id="@+id/forgottenPasswordText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="99sp"
            android:layout_marginEnd="99sp"
            android:layout_marginBottom="16sp"
            android:gravity="center"
            android:text="Forgotten password"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/backToRegisterButton"
            android:layout_width="0dp"
            android:layout_height="25sp"
            android:layout_marginStart="99sp"
            android:layout_marginEnd="99sp"
            android:layout_marginBottom="15sp"
            android:background="@color/colorAccent"
            android:text="Back to Registration"
            android:textColor="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/forgottenPasswordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/backToLoginButton"
            android:layout_width="0dp"
            android:layout_height="25sp"
            android:layout_marginStart="99sp"
            android:layout_marginEnd="99sp"
            android:layout_marginBottom="15sp"
            android:background="@color/colorPrimary"
            android:text="Back to Login"
            android:textColor="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/forgottenPasswordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/infoButton"
            android:layout_width="63sp"
            android:layout_height="69sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/quezzies" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>