...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/postBodyInput"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginEnd="16sp"
...
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/sendPostButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:foregroundGravity="center_vertical|center|center_horizontal"
...

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/recipeIcon"
                            android:layout_width="30sp"
                            android:layout_height="30sp"
                            android:background="@drawable/add_recipe"
                            android:button="@null"
                            android:checked="false"
                            android:maxWidth="30sp"
...
